Move main package in preparation for benchmark